# ecosystem-analyzer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  diagnostics-diff.py  ecosystem.toml  history.sh  json_to_html.py  main.py  plot.py  pyproject.toml  renovate.json5
.github/: renovate.json5
.github/workflows/: ci.yaml
plots/: diagnostics_per_commit.py  diagnostics_per_projects.py
src/ecosystem_analyzer/: __init__.py  config.py  diagnostic.py  diff.py  ecosystem.py  ecosystem_report.py  flaky.py  git.py  git_history.py  installed_project.py  main.py  manager.py  red_knot.py  red_knot_manager.py  run_output.py  ty.py
src/ecosystem_analyzer/templates/: diff.html  ecosystem_report.html  timing_diff.html
templates/: diff.html  ecosystem_report.html
tests/: test_diagnostic.py  test_dynamic_flaky.py  test_exclude_newer.py  test_flaky.py  test_json_roundtrip.py  test_main.py  test_sharding.py  test_ty.py
