[project]
name = "ecosystem-analyzer"
version = "0.1.0"
description = "A tool for analyzing Python projects with ty"
dependencies = ["gitpython", "mypy-primer", "click>=8.0.0", "jinja2>=3.1.6"]
requires-python = ">=3.13"

[project.scripts]
ecosystem-analyzer = "ecosystem_analyzer.main:cli"

[build-system]
requires = ["uv_build>=0.7.13"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
]

[tool.uv.sources]
mypy-primer = { git = "https://github.com/hauntsaninja/mypy_primer" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
