[project]
name = "ecosystem-analyzer"
version = "0.1.0"
description = "A tool for analyzing Python projects with ty"
dependencies = [
    "gitpython==3.1.50",
    "mypy-primer @ git+https://github.com/hauntsaninja/mypy_primer@ff3d9531335dad605d43fcc208c9c159bb09fa81",
    "click==8.4.1",
    "jinja2==3.1.6",
]
requires-python = ">=3.13"

[project.scripts]
ecosystem-analyzer = "ecosystem_analyzer.main:cli"

[build-system]
requires = ["uv_build>=0.7.13"]
build-backend = "uv_build"

[tool.ruff.lint]
preview = true

[tool.ruff.format]
preview = true

[tool.ty.src]
exclude = ["plots"]

[dependency-groups]
dev = ["pytest>=8.4.1", "ty==0.0.54"]
